# migash

./: CMakeLists.txt  GNUmakefile  Makefile.am  README.md  configure.ac  migash.pc.in
docs/: alias-substitution.md  arithmetic-expansion.md  build_guide.md  command-substitution.md  exit-status.md  field-splitting.md  functions.md  if-conditional.md  job-control.md  lists.md  parameter-expansion.md  parameters.md  pattern-matching.md  platform-overview.md  quoting.md  redirection-and-heredoc.md  reserved-words.md  shell-environment.md  shell-grammar.md  signals.md  simple-commands.md  tilde-expansion.md  variables.md  while-until.md
include/: Makefile.am  migash.h
include/miga/: api.h  exec.h  frame.h  migaconf.h.in  type_pub.h
include/migash/: api.h  config.h  exec.h  frame.h  getopt.h  getopt_string.h  getopts.h  string_list.h  string_t.h  strlist.h  type_pub.h
packaging/: migash.spec.in
src/: Makefile.am  arithmetic.c  arithmetic.h  ast.c  ast.h  builtin_store.c  builtin_store.h  builtins.c  builtins.h  exec.c  exec.h  exec_command.c  exec_command.h  exec_expander.c  exec_expander.h  exec_frame.c  exec_frame.h  exec_frame_expander.c  exec_frame_expander.h  exec_frame_policy.h  exec_internal.h  exec_parse_session.c  exec_parse_session.h  exec_redirect.c  exec_redirect.h  exec_stream_repl.c  exec_stream_repl.h  exec_types_internal.h  exec_types_public.h  fd_table.c  fd_table.h  frame.c  frame.h  func_map.c  func_store.c  func_store.h  getopt.c  glob_util.c  glob_util.h  gprint.c  (+34 more)
test/mgsh/: test_alias_ctest.c  test_alist_ctest.c  test_arithmetic_ctest.c  test_ast_ctest.c  test_ast_heredoc_ctest.c  test_exec_ctest.c  test_expander_ctest.c  test_fd_table_ctest.c  test_func_store_ctest.c  test_getopt_ctest.c  test_job_store_ctest.c  test_lexer_arith_exp_ctest.c  test_lexer_cmd_subst_ctest.c  test_lexer_heredoc_ctest.c  test_lexer_param_exp_ctest.c  test_lexer_quotes_ctest.c  test_parser_ctest.c  test_pattern_removal_ctest.c  test_positional_params_ctest.c  test_sig_act_ctest.c  test_string_ctest.c  test_string_list_ctest.c  test_token_array_ctest.c  test_token_ctest.c  test_tokenizer_ctest.c  test_variable_store_ctest.c  (+1 more)
tools/: add_config_h.py
(+2 files in other folders)
