nobase_nodist_pkginclude_HEADERS = \
    miga/migaconf.h

nobase_pkginclude_HEADERS = \
    libmigash.h \
    miga/api.h \
    miga/exec.h \
    miga/frame.h \
    miga/getopt.h \
    miga/mutex.h \
    miga/string_t.h \
    miga/strlist.h \
    miga/type_pub.h \
    miga/xalloc.h

EXTRA_DIST = \
    miga/migaconf.h.in

BUILT_SOURCES = \
    miga/migaconf.h
